style.css
/* ... */
p {
    margin-top: 0;
    margin-bottom: 1rem;
}

.d-none {
    display: none!important;
}

#title {
    grid-area: title;
}

#twitter {
    grid-area: twitter;
}

#head {
    margin-top: .15em;
    grid-area: head;
}

#start {
    grid-area: start;
}

#timechoice {
    grid-area: timechoice;
    max-height: 0em!important;
}

#col1 {
    grid-area: col1;
}

#col2 {
    grid-area: col2;
}

#news {
    grid-area: news;
    min-width: 0;
}

#faq {
    grid-area: faq;
}

h1 {
    font-weight: 900;
    text-align: left;
    font-family: 'Nunito Sans', sans-serif;
    line-height: 1.1;
    font-size: 2.2em;
    margin: 20px 0 5px;
}

b {
    display: block;
    font-weight: 800;
    font-size: 1.05em;
    margin: 1em 0 .4em;
}

#choice {
    margin-top: .4em;
}

#choice b {
    margin: 0 0 .2em;
}

#toggles {
    -webkit-transition: opacity .5s, -webkit-filter .5s;
    transition: opacity .5s, -webkit-filter .5s;
    transition: opacity .5s, filter .5s;
    transition: opacity .5s, filter .5s, -webkit-filter .5s;
    margin-top: -.6em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-content: flex-start;
    align-items: flex-start;
}

#toggles .flex {
    flex: 1 1 230px;
    align-self: auto;
}

#toggles .flex:nth-child(1) {
    padding-right: .4em;
}

#toggles .flex:nth-child(2) {
    padding-left: .4em;
}

.freeze {
    opacity: .4;
    -webkit-filter: blur(0.75px);
    filter: blur(0.75px);
}

#choice .row,
#toggles .row {
    margin-top: .3em;
    padding: 0 10px;
}

#choice .col-lg-4,
#toggles .col-lg-4 {
    padding: 0 5px;
}

#twitter {
    margin: calc(20px + 0.5em) 0 5px;
    text-align: right;
    font-size: 1.1em;
    color: var(--light-txt);
    font-weight: 700;
}

#faqbtn,
#colormode {
    padding-right: .5em;
}

.fa-moon {
    font-size: .93em;
}

#twitter a {
    color: var(--light-txt);
}

#twitter a:hover {
    text-decoration: none;
    color: var(--dark-txt);
}

#head p {
    margin-top: -.15em;
}

p {
    font-size: 1em;
    margin-bottom: .5em;
}

.container {
    width: 100%;
    height: 100%;
}

@-webkit-keyframes swipe {
    from {
        max-height: 0;
        opacity: 0;
    }
    to {
        max-height: 7em;
        opacity: 100%;
    }
}

@keyframes swipe {
    from {
        max-height: 0;
        opacity: 0;
    }
    to {
        max-height: 7em;
        opacity: 100%;
    }
}

a {
    font-weight: 700;
    text-decoration: none;
    background-color: transparent;
}

.statbtns {
    display: grid;
    gap: 0 5px;
    grid-template-rows: 1fr;
    grid-template-columns: repeat(3, 1fr);
}

.choice {
    -webkit-animation: swipe .2s;
    animation: swipe .2s;
}

.choice a {
    margin-right: .45em;
}

#pinned {
    padding-right: .25em;
    -webkit-animation: none;
    animation: none;
    margin: 1em 0 .6em;
}

.box {
    border: 2px solid var(--border);
    line-height: 1.1;
    background-color: var(--box);
    margin-top: .4em;
    margin-bottom: .8em;
    padding: .6em;
    overflow: none;
    /* width: 100%; */
    border-radius: .6em;
    text-align: left;
    max-height: 50em;
}

.box:not(#chartbox) {
    -webkit-animation-name: swipe;
    animation-name: swipe;
    -webkit-animation-duration: .2s;
    animation-duration: .2s;
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
}


/* 
@keyframes hide {
    from {
        width: 100%;
        max-height: 30em;
        margin: 0 .8em;
        padding: .6em;
        opacity: 100%;
    }
    to {
        width: 100%;
        max-height: 0;
        margin: 0 .8em;
        padding: .6em .6em 0 .6em;
        -webkit-box-shadow: none;
        box-shadow: none;
        opacity: 0%
    }
} */


/* .embox {
    display: none;
    height: 0;
    max-height: 0;
    display: flex;
    align-items: center;
    background-color: var(--box);
    margin-bottom: 0 1em;
    padding: .6em .6em 0 .6em;
    overflow: none;
    width: 100%;
    border-radius: .6em;
    text-align: left;
    animation-name: hide;
    animation-duration: .2s;
    opacity: 0%;
} */

#content img,
.box .logo {
    float: left;
    margin-right: .3em;
    border-radius: 30%;
}

#shadow {
    width: 100%;
    height: 6em;
    position: absolute;
    bottom: -1px;
    z-index: 10;
    background: -webkit-gradient(linear, left bottom, left top, color-stop(25%, var(--back)), to(rgba(0, 0, 0, 0)));
    background: linear-gradient(0deg, var(--back) 25%, rgba(0, 0, 0, 0) 100%);
}

@media (min-width: 600px) {
    #scroll,
    #scroll {
        position: relative;
        overflow: scroll;
    }
    /* #scroll {
        height: 77vh;
        min-height: 39em;
    } */
    /* #scroll {
        height: 56vh;
        min-height: 27em;
    } */
}

#stats .box {
    margin-bottom: .4em;
}

#firstnews {
    margin-bottom: 25px;
}

#news {
    height: 100%;
    padding: 0;
    position: relative;
}

.app {
    display: inline;
    font-size: 0.9em;
    margin: 1px 0 0 0;
    font-weight: 600;
}

.newstitle {
    display: block;
    margin-top: .3em;
    margin-bottom: 0;
}

#totop {
    position: relative;
    top: -2px;
    font-family: 'Courier Prime', monospace;
    background-color: var(--dark-txt);
    color: var(--back);
    border-radius: 20%;
    padding: .5px 3px;
    margin-left: 3px;
}

#sdown,
#down {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

#content {
    width: calc(100% - 37px);
    margin: 0;
    display: inline-block;
    vertical-align: top;
}

#arrows {
    margin-left: 0;
    width: 28px;
    height: 100%;
    display: inline-block;
    -webkit-filter: var(--arrows);
    filter: var(--arrows);
}

#weekday,
#date {
    font-weight: 700;
}

#today {
    margin: .3em 0;
}

#timechoice .btn {
    font-size: 1.1em !important;
    width: 32px;
    height: 32px;
    margin-top: .2em;
}

#disclaimermob,
#disclaimer {
    color: #8f8f8f;
    margin-top: .75em;
    font-size: .75em;
    font-weight: 600;
}
/* ... */

